fixed spacing around images and h1

--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,8 @@ h1{
 	color: #000;
 	font-size: 60px;
 	font-weight: bold; 
+	text-align: center;
+	margin: 1em auto;
 }
 
 p{	
@@ -44,15 +46,10 @@ ul {
 
 #facetime {
 	width: 60%; 
-	margin-top: 60px;
-    margin-bottom: 60px
 }
 
 #kitchen {
 	width: 30%; 
-	margin-top:60px;
-	margin-bottom: 60px;
-
 }
 .segundo{
   width: 100%;
@@ -61,7 +58,7 @@ ul {
   color: #000;
   text-align: center;
 }	
-
+/*
 #h1{
   height: auto;
   padding: 10px;
@@ -72,4 +69,4 @@ ul {
 
 #h1spacing{
 	margin:10 0 10 0;
-}
+}*/
